[tool.poetry]
name = "pyqf"
version = "0.1.0"
description = ""
authors = ["njuve <ale.nnn.r@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
sphinx-press-theme = "^0.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
